# django-no-multiline-template-comment

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  tbump.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml
django_no_multiline_template_comment/: __main__.py  _check.py
tests/: test_integration.py
tests/fixtures/: djlint_off_ok.html  mixed_ok_and_wrapped.html  multiple_single_line_ok.html  no_comment_ok.html  single_line_ok.html  two_wrapped.html  two_wrapped.out  wrapped_comment.html  wrapped_comment.out
