[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Pierre Sassoulas", email = "pierre.sassoulas@gmail.com"}]
name = "django-no-multiline-template-comment"
version = "0.0.2"
description = "Reject multi-line Django '{# #}' template comments (a wrapped '{# #}' renders as visible text)."
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/Pierre-Sassoulas/django-no-multiline-template-comment/"

[project.optional-dependencies]
test = [
    "pytest-cov",
    "pytest-remaster",
    "coverage",
    "coveralls",
    "pylint",
    "pre-commit",
    "tbump",
    "setuptools",
]

[project.scripts]
django-no-multiline-template-comment = "django_no_multiline_template_comment.__main__:main"

[tool.setuptools]
packages = ["django_no_multiline_template_comment"]
include-package-data = false

[tool.pytest.ini_options]
# Plain `pytest` compares against committed goldens (strict, CI-safe).
# Regenerate goldens after an intentional behaviour change with `pytest --remaster`.
remaster-by-default = false
